--- a/Web/AspNetCoreTemplate.Web/Views/Home/Create.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Home/Create.cshtml
@@ -7,7 +7,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutWithoutVicCategories.cshtml";
 }
-
+<title>Изпрати виц</title>
 <div>
     <form asp-controller="Home" asp-action="Create" method="post">
 
