--- a/Web/AspNetCoreTemplate.Web/Views/Leaderboard/LeaderboardShow.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Leaderboard/LeaderboardShow.cshtml
@@ -8,6 +8,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutWithoutVicCategories.cshtml";
 }
+    <title>Класация на потребителите - Вицове</title>
     <div>
            <table class="table table-hover table-bordered">
                <thead style="background-color: #294972; color: white; font: bolder 17px verdana">
