--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_VicCategoryPartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_VicCategoryPartial.cshtml
@@ -14,5 +14,8 @@
         <a href="/Vicove/Mrusni" class="list-group-item list-group-item-action blueBtn">Мръсни</a>
         <a href="/Vicove/Policai" class="list-group-item list-group-item-action blueBtn">Полицаи</a>
         <a href="/Vicove/Piqnici" class="list-group-item list-group-item-action blueBtn">Пияници</a>
+        <a href="/Vicove/RadioErevan" class="list-group-item list-group-item-action blueBtn">Радио Ереван</a>
+        <a href="/Vicove/Tupizmi" class="list-group-item list-group-item-action blueBtn">Tъпизми</a>
+        <a href="/Vicove/UchenicheskiBiseri" class="list-group-item list-group-item-action blueBtn">Ученически бисери</a>
         <a href="/Vicove/CherenHumor" class="list-group-item list-group-item-action blueBtn">Черен хумор</a>
     </div>
