--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
@@ -27,60 +27,60 @@
     <ul class="list-group list-group-flush">
         @foreach (var vic in Model)
         {
-            <li class="list-group-item list-group-item-primary" style="border-radius: 20px; padding: 15px; border: thin 2px lightblue; background-color: lightblue">
-                @*style="background-color: lightcyan"*@
-                <p>
-                    @vic.Content
-                </p>
+        <li class="list-group-item list-group-item-primary" style="border-radius: 20px; padding: 15px; border: thin 2px lightblue; background-color: lightblue">
+            @*style="background-color: lightcyan"*@
+            <p>
+                @vic.Content
+            </p>
 
-                <button data-id="@vic.Id" class="@vic.Id btn like-button likeButton">
-                    Харесване
-                    <i class="far fa-thumbs-up @vic.Id"></i>
-                    <span class="@vic.Id">@vic.Points</span>
-                </button>
+            <button data-id="@vic.Id" class="@vic.Id btn like-button likeButton">
+                Харесване
+                <i class="far fa-thumbs-up @vic.Id"></i>
+                <span class="@vic.Id">@vic.Points</span>
+            </button>
 
-                <button data-id="@vic.Id" class="@vic.Id btn add-favourite favButton">
-                     Добави към любими
-                </button>
+            <button data-id="@vic.Id" class="@vic.Id btn add-favourite favButton">
+                Добави към любими
+            </button>
 
-                <span style="white-space: nowrap; float:right">
-                    @if ((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes < 60))
+            <span style="white-space: nowrap; float:right">
+                @if ((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes < 60))
+                {
+                    if (Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes), 0) == 1)
                     {
-                        if (Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes), 0) == 1)
-                        {
-                            <span>преди 1 минутa</span>
-                        }
-                        else
-                        {
-                            <span>преди @Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes), 0) минути</span>
-                        }
+                        <span>преди 1 минутa</span>
                     }
-                    else if (TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes >= 60 && TimeSpan.FromTicks(DateTime.Now.Ticks - vic.CreatedOn.Ticks).TotalHours < 24)
+                    else
                     {
-                        if (Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalHours), 0) == 1)
-                        {
-                            <span>преди 1 час</span>
-                        }
-                        else
-                        {
-                            <span>преди @Math.Round(TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalHours) часа</span>
-                        }
+                        <span>преди @Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes), 0) минути</span>
                     }
-                    else if (TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalHours > 24)
+                }
+                else if (TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalMinutes >= 60 && TimeSpan.FromTicks(DateTime.Now.Ticks - vic.CreatedOn.Ticks).TotalHours < 24)
+                {
+                    if (Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalHours), 0) == 1)
                     {
-                        if (Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalDays), 0) == 1)
-                        {
-                            <span>преди 1 ден</span>
-                        }
-                        else
-                        {
-                            <span>преди @Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalDays), 0) дена</span>
-                        }
+                        <span>преди 1 час</span>
                     }
-                </span>
+                    else
+                    {
+                        <span>преди @Math.Round(TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalHours) часа</span>
+                    }
+                }
+                else if (TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalHours > 24)
+                {
+                    if (Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalDays), 0) == 1)
+                    {
+                        <span>преди 1 ден</span>
+                    }
+                    else
+                    {
+                        <span>преди @Math.Round((TimeSpan.FromTicks(DateTime.UtcNow.Ticks - vic.CreatedOn.Ticks).TotalDays), 0) дена</span>
+                    }
+                }
+            </span>
 
-                <p class="@vic.Id"></p>
-            </li>
+            <p class="@vic.Id"></p>
+        </li>
         }
     </ul>
 
@@ -116,6 +116,8 @@
         </ul>
     </nav>
 </div>
-<script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
-<script src="~/js/site.js"></script>
-<script serc="/signalr/hubs"></script>
+<environment names="Staging,Production">
+    <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
+    <script src="~/js/site.js"></script>
+    <script serc="/signalr/hubs"></script>
+</environment>
