--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Blondinki.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Blondinki.cshtml
@@ -8,6 +8,7 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<title>Вицове за блондинки</title>
 <partial name="~/Views/Shared/_VicovePartial.cshtml" />
 <script src="~/lib/signalr/dist/browser/signalr.min.js"></script>
 <script src="~/js/site.js"></script>
