--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Piqnici.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Piqnici.cshtml
@@ -5,3 +5,5 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <partial name="~/Views/Shared/_VicovePartial.cshtml" />
+
+    <title>Вицове за пияници</title>
