--- a/Web/AspNetCoreTemplate.Web/Views/Home/Index.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Home/Index.cshtml
@@ -4,8 +4,8 @@
     this.ViewData["Title"] = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-
-<h2>Най-новите и популярни вицове!</h2>
+    <title>Най-новите и забавни вицове</title>
+<h2>Най-новите и забавни вицове!</h2>
 
 @*<div>
     <span>Виц на деня</span>
