--- a/Web/AspNetCoreTemplate.Web/Views/MyProfile/Favourite.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/MyProfile/Favourite.cshtml
@@ -7,6 +7,7 @@
 @{
     Layout = "~/Views/Shared/_NavOnlyPartial.cshtml";
 }
+    <title>Любимите ми вицове</title>
 <div class="container">
     <div class="row">
 
