--- a/Web/AspNetCoreTemplate.Web/Views/MyProfile/Index.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/MyProfile/Index.cshtml
@@ -7,6 +7,7 @@
 @{
     Layout = "~/Views/Shared/_NavOnlyPartial.cshtml";
 }
+    <title>Моят профил - Вицове</title>
 <div class="container">
     <div class="row">
 
