--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Create.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Create.cshtml
@@ -7,7 +7,7 @@
 @{
     Layout = "~/Views/Shared/_LayoutWithoutVicCategories.cshtml";
 }
-
+    <title>Изпрати виц</title>
 <div>
     <form asp-controller="Vicove" asp-action="Create" method="post">
 
