--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Mutri.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Mutri.cshtml
@@ -5,3 +5,5 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <partial name="~/Views/Shared/_VicovePartial.cshtml" />
+    <title>Вицове за мутри</title>
+    @*<title>Вицове, категория мутри</title>*@
