--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/NaiNovi.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/NaiNovi.cshtml
@@ -5,6 +5,7 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+    <title>Най-новите вицове в интернет</title>
     <div>
         <ul class="list-group list-group-flush">
             @foreach (var vic in Model)
