--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Tupizmi.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Tupizmi.cshtml
@@ -4,6 +4,6 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <partial name="~/Views/Shared/_VicovePartial.cshtml" />
+<partial name="~/Views/Shared/_VicovePartial.cshtml" />
 
-    <title>Вицове за полицаи</title>
+<title>Вицове - Тъпизми</title>
