--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/UchenicheskiBiseri.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/UchenicheskiBiseri.cshtml
@@ -4,6 +4,5 @@
 @{
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-    <partial name="~/Views/Shared/_VicovePartial.cshtml" />
-
-    <title>Вицове за полицаи</title>
+<partial name="~/Views/Shared/_VicovePartial.cshtml" />
+<title>Ученически бисери</title>
