--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/Zhivotni.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/Zhivotni.cshtml
@@ -5,3 +5,4 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
     <partial name="~/Views/Shared/_VicovePartial.cshtml" />
+    <title>Вицове за Животни</title>
