Minor bug fixes, default values for AllPoints and UploadedVicove is set to 0.

--- a/Web/AspNetCoreTemplate.Web/Areas/Identity/Pages/Account/Register.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Areas/Identity/Pages/Account/Register.cshtml
@@ -35,7 +35,7 @@
             <button type="submit" class="btn btn-primary">Регистрация</button>
         </form>
     </div>
-    <div class="col-md-6 col-md-offset-2">
+    @*<div class="col-md-6 col-md-offset-2">
         <section>
             <h4>Регистрирай се от друго място.</h4>
             <hr />
@@ -64,7 +64,7 @@
                 }
             }
         </section>
-    </div>
+    </div>*@
 </div>
 
 @section Scripts {
