--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
@@ -33,7 +33,7 @@
     </environment>
 </head>
 <body style="background-color: lightgray">
-    <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 sticky-top" style="background-color:lightgray">
+    <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 sticky-top navbarBackgroundColour">
         <div class="container" style="font-size:large">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@GlobalConstants.SystemName</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
