--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
@@ -32,8 +32,8 @@
         <script data-ad-client="ca-pub-8495115122736267" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     </environment>
 </head>
-<body style="background-color: lightgray">
-    <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 sticky-top navbarBackgroundColour">
+<body class="mainBody">
+    <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 sticky-top mainBody">
         <div class="container" style="font-size:large">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@GlobalConstants.SystemName</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -63,7 +63,7 @@
         </div>
     </nav>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3" style="background-color:#294972">
+        <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 navbarBackgroundColour">
             <div class="container" style="font-size:large">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                         aria-expanded="false" aria-label="Toggle navigation">
@@ -95,7 +95,7 @@
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container mainBody">
         <partial name="_CookieConsentPartial" />
         <main role="main" class="pb-3">
             <div class="container-fluid">
@@ -106,7 +106,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer navbar-light" style="background-color:#294972">
+    <footer class="border-top footer navbar-light navbarBackgroundColour">
         <div class="container">
             &copy; @DateTime.Now.Year - М.Петров - <a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
         </div>
