--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
@@ -33,7 +33,7 @@
     </environment>
 </head>
 <body class="mainBody">
-    <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 sticky-top mainBody">
+    <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 sticky-top main-nav">
         <div class="container" style="font-size:large">
             <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@GlobalConstants.SystemName</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
@@ -62,38 +62,6 @@
             </div>
         </div>
     </nav>
-    <header>
-        <nav class="navbar navbar-expand-sm navbar-light border-bottom box-shadow mb-3 navbarBackgroundColour">
-            <div class="container" style="font-size:large">
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-                        aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse d-sm-inline-flex flex-sm-row-reverse" id="navbarNav">
-                    <ul class="navbar-nav flex-grow-1 mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Vicove" asp-action="NaiPopulqrni">Най-популярни</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-light" asp-area="" asp-controller="Vicove" asp-action="NaiNovi">Най-нови</a>
-                        </li>
-                        @if (signInManager.IsSignedIn(User))
-                        {
-                            <li class="nav-item text-right">
-                                <a class="nav-link text-light" asp-area="" asp-controller="MyProfile" asp-action="Index">Моят профил</a>
-                            </li>
-                        }
-                        @*<li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Settings" asp-action="Index">Settings</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>*@
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
 
     <div class="container mainBody">
         <partial name="_CookieConsentPartial" />
@@ -106,7 +74,7 @@
         </main>
     </div>
 
-    <footer class="border-top footer navbar-light navbarBackgroundColour">
+    <footer class="border-top footer navbar-light main-nav">
         <div class="container">
             &copy; @DateTime.Now.Year - М.Петров - <a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
         </div>
