--- a/Web/AspNetCoreTemplate.Web/wwwroot/css/site.css
+++ b/Web/AspNetCoreTemplate.Web/wwwroot/css/site.css
@@ -35,12 +35,45 @@ for details on configuring this project to bundle and minify static web assets. 
     text-shadow: 1px 1px 1px rgba(0,0,0,0.2);
 }
 
-.navbarBackgroundColour {
-    background-color: #457b9d;
+.secondary-nav a {
+    text-decoration: none;
+    color: #333333;
+    font-size: 18px;
+}
+
+.secondary-nav li:hover {
+    border-bottom: solid 1px black;
+}
+
+.secondary-nav {
+    align-items: center;
+    display: inline-flex;
+    height: 10vh;
+    justify-content: flex-start;
+}
+
+.secondary-nav ul{
+    min-height: 4vw;
+    min-width: 30vw;
+    padding: 1vw;
+    margin-left: 20vw;
+}
+
+.secondary-nav li{
+    display: inline-flex;
+    margin-right: 1vw;
 }
 
 .mainBody {
     background-color: #C3E0E5;
+}
+
+.main-nav {
+    background-color: lightskyblue;
+}
+
+.main-nav a:hover{
+    border-bottom: solid 1px black;
 }
 
 a.blueBtn {
