--- a/Web/AspNetCoreTemplate.Web/wwwroot/css/site.css
+++ b/Web/AspNetCoreTemplate.Web/wwwroot/css/site.css
@@ -69,7 +69,7 @@ for details on configuring this project to bundle and minify static web assets. 
 }
 
 .main-nav {
-    background-color: lightskyblue;
+    background-color: #023047;
 }
 
 .main-nav a:hover{
