--- a/Web/AspNetCoreTemplate.Web/Views/Home/SelectVOD.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Home/SelectVOD.cshtml
@@ -5,6 +5,9 @@
 @*
     For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
 *@
+@{
+    Layout = "~/Views/Shared/_LayoutWithoutVicCategories.cshtml";
+}
 <div>
     <ul class="list-group list-group-flush" style="background-color: lightblue">
         @foreach (var vic in Model)
@@ -25,32 +28,35 @@
 
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-            @if (Model.GetHasPreviousPage)
+            @if (Model.TotalPages > 1)
             {
-                <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex - 1)">Предишна</a></li>
-            }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Предишна</a></li>
-            }
-            @for (int i = 1; i <= Model.TotalPages; i++)
-            {
-                if (Model.PageIndex == i)
+                @if (Model.GetHasPreviousPage)
                 {
-                    <li class="page-item active"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex - 1)">Предишна</a></li>
                 }
                 else
                 {
-                    <li class="page-item"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    <li class="page-item disabled"><a class="page-link">Предишна</a></li>
                 }
-            }
-            @if (Model.HasNextPage)
-            {
-                <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex + 1)">Следваща</a></li>
-            }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Следваща</a></li>
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    if (Model.PageIndex == i)
+                    {
+                        <li class="page-item active"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    }
+                    else
+                    {
+                        <li class="page-item"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    }
+                }
+                @if (Model.HasNextPage)
+                {
+                    <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex + 1)">Следваща</a></li>
+                }
+                else
+                {
+                    <li class="page-item disabled"><a class="page-link">Следваща</a></li>
+                }
             }
         </ul>
     </nav>
