--- a/Web/AspNetCoreTemplate.Web/Views/VicReview/ShowAllForReview.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/VicReview/ShowAllForReview.cshtml
@@ -37,32 +37,35 @@
 
     <nav aria-label="Page navigation">
         <ul class="pagination justify-content-center">
-            @if (Model.GetHasPreviousPage)
+            @if (Model.TotalPages > 1)
             {
-                <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex - 1)">Предишна</a></li>
-            }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Предишна</a></li>
-            }
-            @for (int i = 1; i <= Model.TotalPages; i++)
-            {
-                if (Model.PageIndex == i)
+                @if (Model.GetHasPreviousPage)
                 {
-                    <li class="page-item active"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex - 1)">Предишна</a></li>
                 }
                 else
                 {
-                    <li class="page-item"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    <li class="page-item disabled"><a class="page-link">Предишна</a></li>
                 }
-            }
-            @if (Model.HasNextPage)
-            {
-                <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex + 1)">Следваща</a></li>
-            }
-            else
-            {
-                <li class="page-item disabled"><a class="page-link">Следваща</a></li>
+                @for (int i = 1; i <= Model.TotalPages; i++)
+                {
+                    if (Model.PageIndex == i)
+                    {
+                        <li class="page-item active"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    }
+                    else
+                    {
+                        <li class="page-item"><a class="page-link" asp-route-pageNumber="@i">@i</a></li>
+                    }
+                }
+                @if (Model.HasNextPage)
+                {
+                    <li class="page-item"><a class="page-link bluePaginationActive" asp-route-pageNumber="@(Model.PageIndex + 1)">Следваща</a></li>
+                }
+                else
+                {
+                    <li class="page-item disabled"><a class="page-link">Следваща</a></li>
+                }
             }
         </ul>
     </nav>
