--- a/Web/AspNetCoreTemplate.Web/Views/Leaderboard/LeaderboardShow.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Leaderboard/LeaderboardShow.cshtml
@@ -19,13 +19,15 @@
                    </tr>
                </thead>
                <tbody class="navyBorder" style="border: #294972">
-                   @foreach (var user in Model)
+                   @{int place = 1; } 
+                   @foreach (var user in Model.OrderByDescending(u => u.Points))
                    {
                        <tr class="navyBorder" style="border: #294972">
-                           <th style="border: #294972" scope="row">@user.Id</th>
+                           <th style="border: #294972" scope="row">@place</th>
                            <td style="border: #294972">@user.UserName</td>
                            <td style="border: #294972">@user.Points</td>
                        </tr>
+                       place++;
                    }
                </tbody>
            </table>
