--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_LoginPartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_LoginPartial.cshtml
@@ -25,10 +25,10 @@
     else
     {
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Register">Регистрация</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Влизане</a>
+            <a class="nav-link text-light" asp-area="Identity" asp-page="/Account/Login">Влизане</a>
         </li>
     }
 </ul>
