Added github watermark link in footer.

--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_LayoutWithoutVicCategories.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_LayoutWithoutVicCategories.cshtml
@@ -83,7 +83,7 @@
 
     <footer class="border-top footer main-nav">
         <div class="container text-light">
-            &copy; @DateTime.Now.Year - М.Петров - <a asp-area="" asp-controller="Home" asp-action="Privacy"></a>
+            &copy; @DateTime.Now.Year - М.Петров - GitHub <a href="https://github.com/martuto31/JokesWebSite"><i class="fab fa-github"></i></a>
         </div>
     </footer>
 
