Like button update.

--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_VicovePartial.cshtml
@@ -36,6 +36,7 @@
                 @vic.Content
             </p>
             <button data-id="@vic.Id" class="@vic.Id btn like-button likeButton">
+                Харесване
                 <i class="fa fa-thumbs-up"></i>
                 <span class="@vic.Id">@vic.Points</span>
             </button>
