--- a/Web/AspNetCoreTemplate.Web/Views/Vicove/NaiNovi.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Vicove/NaiNovi.cshtml
@@ -18,7 +18,7 @@
 
                     <button data-id="@vic.Id" class="@vic.Id btn like-button likeButton">
                         Харесване
-                        <i class="far fa-thumbs-up @vic.Id"></i>
+                        <i class="fa fa-thumbs-up"></i>
                         <span class="@vic.Id">@vic.Points</span>
                     </button>
 
