--- a/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
+++ b/Web/AspNetCoreTemplate.Web/Views/Shared/_NavOnlyPartial.cshtml
@@ -35,7 +35,7 @@
 <body class="mainBody">
     <nav class="navbar navbar-expand-sm navbar-dark border-bottom box-shadow mb-3 sticky-top main-nav">
         <div class="container" style="font-size:large">
-            <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">@GlobalConstants.SystemName</a>
+            <a class="navbar-brand" asp-area="" asp-controller="Vicove" asp-action="NaiNovi">@GlobalConstants.SystemName</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
                     aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -44,23 +44,40 @@
                 <partial name="_LoginPartial" />
                 <ul class="navbar-nav nav-pills flex-grow-1 mr-auto mt-2 mt-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Vicove" asp-action="Create">Качи виц</a>
+                        <a class="nav-link" asp-controller="Vicove" asp-action="Create">Качи виц</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" asp-area="" asp-controller="Leaderboard" asp-action="LeaderboardShow">Класация</a>
+                        <a class="nav-link" asp-controller="Leaderboard" asp-action="LeaderboardShow">Класация</a>
                     </li>
                     @if (signInManager.IsSignedIn(User) && User.IsInRole("Administrator"))
                     {
-                        <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="VicReview" asp-action="ShowAllForReview">Удобрение</a>
-                        </li>
-                        <li class="nav-item">
+                    <li class="nav-item">
+                        <a class="nav-link" asp-area="" asp-controller="VicReview" asp-action="ShowAllForReview">Удобрение</a>
+                    </li>
+                    @*<li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="SelectVOD">Избери за виц на деня</a>
-                        </li>
+                        </li>*@
                     }
                 </ul>
             </div>
         </div>
+    </nav>
+
+    <nav class="mainBody secondary-nav">
+        <ul>
+            <li>
+                <a asp-area="" asp-controller="Vicove" asp-action="NaiPopulqrni">Най-популярни</a>
+            </li>
+            <li>
+                <a asp-area="" asp-controller="Vicove" asp-action="NaiNovi">Най-нови</a>
+            </li>
+            @if (signInManager.IsSignedIn(User))
+             {
+            <li style="margin:auto">
+                <a asp-area="" asp-controller="MyProfile" asp-action="Index">Моят профил</a>
+            </li>
+             }
+        </ul>
     </nav>
 
     <div class="container mainBody">
@@ -68,7 +85,7 @@
         <main role="main" class="pb-3">
             <div class="container-fluid">
                 <div class="row">
-                        @this.RenderBody()
+                    @this.RenderBody()
                 </div>
             </div>
         </main>
